Functionality to join and leave groups have been added to the branch.

--- a/StudyRingMeteor/client/accounts/Login.html
+++ b/StudyRingMeteor/client/accounts/Login.html
@@ -13,24 +13,23 @@
                                         <br />
                                         <div class="form-group input-group">
                                             <span class="input-group-addon"><i class="fa fa-tag"  ></i></span>
-                                            <input type="text" class="form-control" placeholder="Your Username " />
+                                            <input name="myUsername" type="text" class="form-control" placeholder="Your Username " />
                                         </div>
                                                                                 <div class="form-group input-group">
                                             <span class="input-group-addon"><i class="fa fa-lock"  ></i></span>
-                                            <input type="password" class="form-control"  placeholder="Your Password" />
+                                            <input name="myPassword" type="password" class="form-control"  placeholder="Your Password" />
                                         </div>
                                     <div class="form-group">
                                             <label class="checkbox-inline">
-                                                <input type="checkbox" /> Remember me
+                                                <input type="checkbox"/> Remember me
                                             </label>
                                             <span class="pull-right">
                                                     <a href="#" >Forget password ? </a>
                                             </span>
                                         </div>
-
-                                        <a href="index.html" class="btn btn-primary ">Login Now</a>
+                                        <input type="submit" name="Login" value="Login"/>
                                     <hr />
-                                    Not registered ? <a href="" class="register">click here </a>
+                                    Not registered ? <a href="/register" class="register">click here </a>
                                     </form>
                             </div>
 
