--- a/StudyRingMeteor/client/accounts/Register.html
+++ b/StudyRingMeteor/client/accounts/Register.html
@@ -22,28 +22,28 @@
 <br/>
                                         <div class="form-group input-group">
                                             <span class="input-group-addon"><i class="fa fa-circle-o-notch"  ></i></span>
-                                            <input type="text" class="form-control" placeholder="Your Name" />
+                                            <input name="registerName" type="text" class="form-control" placeholder="Your Name" />
                                         </div>
                                      <div class="form-group input-group">
                                             <span class="input-group-addon"><i class="fa fa-tag"  ></i></span>
-                                            <input type="text" class="form-control" placeholder="Desired Username" />
+                                            <input name="registerUsername" type="text" class="form-control" placeholder="Desired Username" />
                                         </div>
                                          <div class="form-group input-group">
                                             <span class="input-group-addon">@</span>
-                                            <input type="text" class="form-control" placeholder="Your Email" />
+                                            <input name="registerEmail" type="text" class="form-control" placeholder="Your Email" />
                                         </div>
                                       <div class="form-group input-group">
-                                            <span class="input-group-addon"><i class="fa fa-lock"  ></i></span>
-                                            <input type="password" class="form-control" placeholder="Enter Password" />
+                                            <span class="input-group-addon"> <i class="fa fa-lock"  ></i></span>
+                                            <input name="registerPassword" type="password" class="form-control" placeholder="Enter Password" />
                                         </div>
                                      <div class="form-group input-group">
                                             <span class="input-group-addon"><i class="fa fa-lock"  ></i></span>
-                                            <input type="password" class="form-control" placeholder="Retype Password" />
+                                            <input name="registerPassword2" type="password" class="form-control" placeholder="Retype Password" />
                                         </div>
 
-                                     <a href="index.html" class="btn btn-success ">Register Me</a>
+                                     <input type="submit" name="Register" value="Register"/>
                                     <hr />
-                                    Already Registered ?  <a href="login.html" >Login here</a>
+                                    Already Registered ?  <a href="/" class='register' >Login here</a>
                                     </form>
                             </div>
 
