--- a/StudyRingMeteor/client/rings/RingInfo.html
+++ b/StudyRingMeteor/client/rings/RingInfo.html
@@ -1,24 +1,33 @@
 <template name="RingInfo">
     <article class="ring {{#if isPrivate}}is-private{{/if}}">
         <h3>
-            {{name}}
+            Name: {{name}}
         </h3>
         {{#if editMode}}
                 {{> quickForm collection="Rings" id=updateRingId type="update" doc=this autosave=true}}
             {{else}}
             <p>
-                {{desc}}
+                Description: {{desc}}
             </p>
             <p>
+                Tags:
                 {{#each tags}}
                     <span class="tags">{{name}}</span>
                 {{/each}}
             </p>
+            <p>
+                Created By: {{user.username}} {{> avatar userId=userId shape="circle" size="medium"}}
+            </p>
             <a href="/rings/{{_id}}">View Details</a>
             {{#if isPrivate}}
                 <button class="btn-primary set-public">Set Public</button>
-                {{else}}
+            {{else}}
                 <button class="btn-deny set-private">Set Private</button>
+            {{/if}}
+            {{#if isMember}}
+                <button class="btn-deny leave-ring">Leave Ring</button>
+            {{else}}
+                <button class="btn-primary join-ring">Join Ring</button>
             {{/if}}
         {{/if}}
         <i class="fa fa-pencil"></i>
