Revert "Extra formatting to meet requirements"

--- a/StudyRingMeteor/client/accounts/AccountSettings.html
+++ b/StudyRingMeteor/client/accounts/AccountSettings.html
@@ -1,11 +1,4 @@
-<!--
-________________________________________________________________________________
-                          ****AccountSettings****
-Description: Appears in the "Account Settings tab
-Sub-templates: ChangePassword, ChangeUsername, AvatarManager
-Functions: Change the user's password, avatar or username.
-________________________________________________________________________________
--->
+<!-- Account settings -->
 <template name="AccountSettings">
   <h1> Account settings </h1>
   {{#if $.Session.get 'changeSettings'}}
