--- a/StudyRingMeteor/client/forum/SubForum.html
+++ b/StudyRingMeteor/client/forum/SubForum.html
@@ -1,11 +1,4 @@
-<!--
-________________________________________________________________________________
-                                ****RingDiscussion****
-Description: Rings is the template that appears under the "Forums" tab.
-Functions: Display all relevant ring discussions.
-________________________________________________________________________________
--->
-<template name="RingDiscussion">
+<template name="ringDiscussion">
   <div class="container">
     <h2>Discuss with your rings!</h2>
     <div class="btn-group">
