--- a/StudyRingMeteor/client/rings/RingDash.html
+++ b/StudyRingMeteor/client/rings/RingDash.html
@@ -1,11 +1,5 @@
-<!--
-________________________________________________________________________________
-                                ****RingDash****
-Description: Rings is the template that appears under the "My Rings" tab.
-Subtemplates: Events, Forums
-Functions: Display all the information of the specific ring.
-________________________________________________________________________________
--->
+<!--Ring Dashboard will contain future features such as an organized display of
+    events, members, forum or communication between members and other information-->
 
 <template name="RingDash">
     <article class="ring">
