--- a/StudyRingMeteor/client/forum/MainForum.html
+++ b/StudyRingMeteor/client/forum/MainForum.html
@@ -10,7 +10,7 @@ ________________________________________________________________________________
   <body>
       <div class="jumbotron">
         <h1>Welcome To The Forum</h1>
-          {{>ringDiscussion}}
+          {{>RingDiscussion}}
         <br><br>
         <p>Have a question? We are here to help!</p>
       </div>
