--- a/StudyRingMeteor/client/rings/NewEvent.html
+++ b/StudyRingMeteor/client/rings/NewEvent.html
@@ -1,3 +1,63 @@
+<template name="Events">
+        {{> NewEvent}}
+{{#if Template.subscriptionsReady}}
+Events:
+    {{#each events}}
+          {{> EventInfo}}
+    {{/each}}
+{{else}}
+Events:
+    <p>Loading</p>
+{{/if}}
+</template>
+<!--
+________________________________________________________________________________
+                                ****EventInfo****
+Description: Appears in the Dashboard, displays events for a specific ring
+Functions: Template to show a ring's events
+________________________________________________________________________________
+-->
+<template name="EventsInfo">
+    <article class="ring {{#if isPrivate}}is-private{{/if}}">
+        <h3>
+            Name: {{name}}
+        </h3>
+        {{#if editMode}}
+                {{> quickForm collection=Events id=updateRingId type="update" doc=this autosave=true}}
+            {{else}}
+            <p>
+                Description: {{desc}}
+            </p>
+            <p>
+                Tags:
+                {{#each tags}}
+                    <span class="tags">{{name}}</span>
+                {{/each}}
+            </p>
+            <p>
+                Created By: {{user.username}} {{> avatar userId=userId shape="circle" size="medium"}}
+            </p>
+
+            {{#if isMember}}
+                <button class="btn-deny leave-ring">Leave Event</button>
+            {{else}}
+                <button class="btn-primary join-ring">Join Event</button>
+            {{/if}}
+        {{/if}}
+
+        {{#if isOwner createdBy}}                                               <!--Displays options to delete or edit an event only if it is the owner-->
+            <i class="fa fa-pencil"></i>
+            <i class="fa fa-trash"></i>
+        {{/if}}
+    </article>
+</template>
+
+<!--
+________________________________________________________________________________
+                                ****NewEvent****
+Description: Form to create a new event
+________________________________________________________________________________
+-->
 <template name="NewEvent">
     <div class="new-ring-container">
       {{#if $.Session.get 'newEvent'}}
